fix various minor issues.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,4 @@ include(cmake/stb.cmake)
 add_subdirectory(espelette)
 
 add_executable(test main.cpp)
-target_link_libraries(test espelette)
+target_link_libraries(test PRIVATE espelette)
