made drawlist static and draw functions free. Perhaps ill come to regret this.

--- a/espelette/CMakeLists.txt
+++ b/espelette/CMakeLists.txt
@@ -5,11 +5,16 @@ add_library(espelette
         src/image.cpp
         include/espelette/app.h
         src/app.cpp
-        include/espelette/vec.h
+        src/vec.h
         src/vec.cpp
         src/draw_backend.cpp
         include/espelette.h
-        src/stb_impl.cpp include/espelette/input.h src/input.cpp src/input_state.h)
+        src/stb_impl.cpp
+        include/espelette/input.h
+        src/input.cpp
+        src/input_state.h
+        src/draw_backend.h
+        src/draw_list.h)
 
 target_include_directories(espelette PUBLIC include PRIVATE include/espelette)
 
